--- a/templates/app/product/category.html
+++ b/templates/app/product/category.html
@@ -15,7 +15,7 @@
 
         <div class="col">
           <div class="card shadow-sm">
-            <img class="img-fluid" alt="Responsive image" src="{{ product.image.url }}">
+            <img class="img-fluid"  style="height:150px;width:100%;object-fit:cover;" alt="Responsive image" src="{{ product.image.url }}">
             <div class="card-body">
               <p class="card-text">
                 <a class="text-dark text-decoration-none" href="{{ product.get_absolute_url }}">{{ product.title }}</a>
