--- a/templates/app/basket/billing.html
+++ b/templates/app/basket/billing.html
@@ -7,7 +7,7 @@
 <div class="col-md-4 order-md-2 mb-4 mt-3">
           <h4 class="d-flex justify-content-between align-items-center mb-3">
             <span class="text-muted">Your cart</span>
-            <span class="badge badge-secondary badge-pill">{{basket|length}}</span>
+            <span class="">{{basket|length}}</span>
           </h4>
           <ul class="list-group mb-3">
           {% for item in basket %}
@@ -15,91 +15,59 @@
             <li class="list-group-item d-flex justify-content-between lh-condensed">
               <div>
                 <h6 class="my-0">{{product.title|title}}</h6>
-                <small class="text-muted">{{product.description}}</small>
+                <small class="text-muted">{{product.description|truncatechars:50}}</small>
               </div>
               <span class="text-muted">{{item.price}}</span>
             </li>
         {% endwith %}
             {% endfor %}
-            {% comment %} <li class="list-group-item d-flex justify-content-between lh-condensed">
-              <div>
-                <h6 class="my-0">Second product</h6>
-                <small class="text-muted">Brief description</small>
-              </div>
-              <span class="text-muted">$8</span>
-            </li>
-            <li class="list-group-item d-flex justify-content-between lh-condensed">
-              <div>
-                <h6 class="my-0">Third item</h6>
-                <small class="text-muted">Brief description</small>
-              </div>
-              <span class="text-muted">Rs.5</span>
-            </li> {% endcomment %}
-            {% comment %} <li class="list-group-item d-flex justify-content-between bg-light">
-              <div class="text-success">
-                <h6 class="my-0">Promo code</h6>
-                <small>EXAMPLECODE</small>
-              </div>
-              <span class="text-success">-$5</span>
-            </li> {% endcomment %}
+      
             <li class="list-group-item d-flex justify-content-between">
-              <span>Total (Rs.)</span>
+              <span><strong> Total (Rs.)</strong></span>
               <strong>{{ basket.get_total_price }}</strong>
             </li>
           </ul>
-          {% comment %} <form class="card p-2">
-            <div class="input-group">
-              <input type="text" class="form-control" placeholder="Promo code">
-              <div class="input-group-append">
-                <button type="submit" class="btn btn-secondary">Redeem</button>
-              </div>
-            </div>
-          </form> {% endcomment %}
+     
         </div>
 <div class="col-md-8 order-md-1 mt-3">
           <h4 class="mb-3">Billing address</h4>
-          <form class="needs-validation" novalidate="">
+          <form class="needs-validation" novalidate="" action="{% url "payment:payment"%}" method="POST">
+          {% csrf_token %}
             <div class="row">
               <div class="col-md-6 mb-3">
                 <label for="firstName">First name</label>
-                <input type="text" class="form-control" id="firstName" placeholder="" value="" required="">
+                <input type="text" class="form-control" id="firstName" placeholder="" value="" name="fname" required="">
                 <div class="invalid-feedback">
                   Valid first name is required.
                 </div>
               </div>
               <div class="col-md-6 mb-3">
                 <label for="lastName">Last name</label>
-                <input type="text" class="form-control" id="lastName" placeholder="" value="" required="">
+                <input type="text" class="form-control" name="lname" id="lastName" placeholder="" value="" required="">
                 <div class="invalid-feedback">
                   Valid last name is required.
                 </div>
               </div>
             </div>
-
-            {% comment %} <div class="mb-3">
-              <label for="username">Username</label>
-              <div class="input-group">
-                <div class="input-group-prepend">
-                  <span class="input-group-text">@</span>
-                </div>
-                <input type="text" class="form-control" id="username" placeholder="Username" required="">
-                <div class="invalid-feedback" style="width: 100%;">
-                  Your username is required.
-                </div>
-              </div>
-            </div> {% endcomment %}
-
-            <div class="mb-3">
+            <div class="row">
+            <div class="mb-3 col-md-6">
               <label for="email">Email <span class="text-muted">(Optional)</span></label>
-              <input type="email" class="form-control" id="email" placeholder="">
+              <input type="email" class="form-control" id="email" placeholder="" name="email">
               <div class="invalid-feedback">
                 Please enter a valid email address for shipping updates.
               </div>
             </div>
-
+            <div class="mb-3 col-md-6">
+              <label for="email">Mobile No <span class="text-muted"></span></label>
+              <input type="number" class="form-control" id="mobile" placeholder="" name="mobile">
+              <div class="invalid-feedback">
+                Please enter a valid mobile no address for shipping updates.
+              </div>
+            </div>
+            </div>
             <div class="mb-3">
               <label for="address">Address</label>
-              <input type="text" class="form-control" id="address" placeholder="" required="">
+              <input type="text" class="form-control" id="address" placeholder="" name="address1" required="">
               <div class="invalid-feedback">
                 Please enter your shipping address.
               </div>
@@ -107,13 +75,13 @@
 
             <div class="mb-3">
               <label for="address2">Address 2 <span class="text-muted">(Optional)</span></label>
-              <input type="text" class="form-control" id="address2" placeholder="Apartment or suite">
+              <input type="text" class="form-control" name="address2" id="address2" placeholder="Apartment or suite">
             </div>
 
             <div class="row">
               <div class="col-md-5 mb-3">
                 <label for="country">Country</label>
-                <select class="custom-select d-block w-100" id="country" required="">
+                <select class="custom-select d-block w-100" id="country" name="country" required="">
                   <option value="">Choose...</option>
                   <option>India</option>
                 </select>
@@ -123,83 +91,39 @@
               </div>
               <div class="col-md-4 mb-3">
                 <label for="state">State</label>
-                <select class="custom-select d-block w-100" id="state" required="">
+                <select class="custom-select d-block w-100" id="state" required="" name="state">
                   <option value="">Choose...</option>
-                  <option>California</option>
+                  <option>Maharashtra</option>
                 </select>
                 <div class="invalid-feedback">
                   Please provide a valid state.
                 </div>
               </div>
               <div class="col-md-3 mb-3">
+                <label for="city">City</label>
+                <input type="text" class="form-control" id="zip" placeholder="" required="" name="city">
+                <div class="invalid-feedback">
+                  City required
+                </div>
+              </div>
+            </div>
+             <div class="col-md-3 mb-3">
                 <label for="zip">Zip</label>
-                <input type="text" class="form-control" id="zip" placeholder="" required="">
+                <input type="text" class="form-control" id="zip" placeholder="" required="" name="pcode">
                 <div class="invalid-feedback">
                   Zip code required.
                 </div>
               </div>
-            </div>
-            <hr class="mb-4">
-            <div class="custom-control custom-checkbox">
+            {% comment %} <div class="custom-control custom-checkbox">
               <input type="checkbox" class="custom-control-input" id="same-address">
               <label class="custom-control-label" for="same-address">Shipping address is the same as my billing address</label>
             </div>
             <div class="custom-control custom-checkbox">
               <input type="checkbox" class="custom-control-input" id="save-info">
               <label class="custom-control-label" for="save-info">Save this information for next time</label>
-            </div>
-            <hr class="mb-4">
-
-            {% comment %} <h4 class="mb-3">Payment</h4>
-
-            <div class="d-block my-3">
-              <div class="custom-control custom-radio">
-                <input id="credit" name="paymentMethod" type="radio" class="custom-control-input" checked="" required="">
-                <label class="custom-control-label" for="credit">Credit card</label>
-              </div>
-              <div class="custom-control custom-radio">
-                <input id="debit" name="paymentMethod" type="radio" class="custom-control-input" required="">
-                <label class="custom-control-label" for="debit">Debit card</label>
-              </div>
-              <div class="custom-control custom-radio">
-                <input id="paypal" name="paymentMethod" type="radio" class="custom-control-input" required="">
-                <label class="custom-control-label" for="paypal">Paypal</label>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-6 mb-3">
-                <label for="cc-name">Name on card</label>
-                <input type="text" class="form-control" id="cc-name" placeholder="" required="">
-                <small class="text-muted">Full name as displayed on card</small>
-                <div class="invalid-feedback">
-                  Name on card is required
-                </div>
-              </div>
-              <div class="col-md-6 mb-3">
-                <label for="cc-number">Credit card number</label>
-                <input type="text" class="form-control" id="cc-number" placeholder="" required="">
-                <div class="invalid-feedback">
-                  Credit card number is required
-                </div>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-3 mb-3">
-                <label for="cc-expiration">Expiration</label>
-                <input type="text" class="form-control" id="cc-expiration" placeholder="" required="">
-                <div class="invalid-feedback">
-                  Expiration date required
-                </div>
-              </div>
-              <div class="col-md-3 mb-3">
-                <label for="cc-expiration">CVV</label>
-                <input type="text" class="form-control" id="cc-cvv" placeholder="" required="">
-                <div class="invalid-feedback">
-                  Security code required
-                </div>
-              </div>
             </div> {% endcomment %}
-            <hr class="mb-4">
+            <input type="number" hidden name="amount" class="form-control" id="exampleInputPassword1" value="{{basket.get_total_price }}" />
+
             <button class="btn btn-primary btn-lg btn-block mb-4" type="submit">Continue to checkout</button>
           </form>
         </div>
